[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Materials/Spike.tres" type="Material" id=3]
[ext_resource path="res://Materials/Smu Skin.tres" type="Material" id=4]
[ext_resource path="res://Pet/Pet.gd" type="Script" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pet/pompom.glb" type="PackedScene" id=7]
[ext_resource path="res://Materials/Pomblue.tres" type="Material" id=8]
[ext_resource path="res://Materials/Pombody.tres" type="Material" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 1.65913
height = 2.20587

[sub_resource type="CapsuleShape" id=2]
radius = 1.65825

[sub_resource type="CapsuleShape" id=3]
radius = 4.45769

[node name="Pet" type="KinematicBody"]
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60926, 0.178354 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66622, 0 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33489, 0 )
shape = SubResource( 3 )

[node name="pompom" parent="." instance=ExtResource( 7 )]

[node name="Pompom v3 Pompom v3 Body15 " parent="pompom" index="0"]
transform = Transform( -0.13, -7.33538e-08, 0, 0, 0, -0.13, 7.33538e-08, -0.13, 0, 0, 0, 0 )
material/0 = ExtResource( 9 )

[node name="Pompom v3 Pompom v3 Body16 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="0"]
material/0 = ExtResource( 8 )

[node name="Pompom v3 Pompom v3 Body21 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="1"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body22 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="2"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body23 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="3"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body24 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="4"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body25 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="5"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body27 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="6"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body28 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="7"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body29 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="8"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body30 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="9"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body31 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="10"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body32 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="11"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body33 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="12"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body34 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="13"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body35 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="14"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body36 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="15"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body37 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="16"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body38 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="17"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body39 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="18"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body40 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="19"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body41 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="20"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body42 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="21"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body43 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="22"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body44 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="23"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body45 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="24"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Body46 " parent="pompom/Pompom v3 Pompom v3 Body15 " index="25"]
material/0 = ExtResource( 3 )

[node name="Pompom v3 Pompom v3 Feeny Rider mini v7 1 Body4 Feeny Rider min" parent="pompom/Pompom v3 Pompom v3 Body15 " index="27"]
material/0 = ExtResource( 4 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="pompom"]
